feat: MyLauncher方案成功